Simplify some ColorHelper code
Remove unused internal block tag utility class